# trontsnap

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SETUP.md  bootstrap.ps1  build.rs
docs/: index.html
packaging/: Install TrontSnap.cmd  Launch TrontSnap.cmd
src/: app.rs  audio.rs  autostart.rs  capture.rs  clipboard.rs  color.rs  cursor.rs  gallery.rs  gifexport.rs  index.rs  keyhook.rs  main.rs  overlay.rs  printscreen.rs  recorder.rs  region_win32.rs  settings.rs  sound.rs  theme.rs  thumbs.rs  toast.rs  videothumb.rs  watcher.rs
verify_shots/: capture.ps1
