[package]
name = "trontsnap"
version = "0.5.8"
edition = "2021"
description = "Fast screenshot tool: global-hotkey capture (full + freeze-frame region) straight to clipboard, plus a lazy-loading gallery over your whole screenshot history"

[dependencies]
eframe = "0.29.1"
xcap = "0.0.15"
image = "0.24.9"
anyhow = "1"
chrono = "0.4"
dirs = "5"
tray-icon = "0.19"
winreg = "0.52"
trash = "5"
opener = "0.7"
crossbeam-channel = "0.5"
walkdir = "2"
notify = "6"
drag = "2.1.1"
raw-window-handle = "0.6"
# Global keyboard hook, shutter sound, and the multi-format clipboard writer all
# use Win32 directly. windows 0.56 is already in the lockfile (via trash/opener),
# so this only adds features to the resolved version, no duplicate copy.
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3        # speed over size: this app decodes a lot of images
lto = true
codegen-units = 1
strip = true
panic = "abort"
